ultime modifiche prima presentazione

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,30 +10,30 @@
 
         <div class="container">
           <div class="carousel-caption text-start">
-            <h1>Example headline.</h1>
+            <h1>Reale Mutua Assicurazioni</h1>
             <p>Costruendo ogni giorno il nostro domani. Insieme.</p>
           </div>
         </div>
       </div>
 
       <div class="carousel-item">
-        <img src="assets/sources/car_save.jpg"  class="d-block w-100" alt="...">
+        <img src="assets/sources/home2.jpg"  class="d-block w-100" alt="...">
 
         <div class="container">
           <div class="carousel-caption">
-            <h1>190 anni, un passo dopo l’altro</h1>
-            <p>Proteggervi è nel nostro DNA. Da 190 anni.</p>
+            <h1>Risparmia con noi</h1>
+            <p>L'insieme di soluzioni flessibili studiate per far crescere il tuo capitale.</p>
             
           </div>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="assets/sources/car_mani.jpg" class="d-block w-100" alt="...">
+        <img src="assets/sources/home3.jpg" class="d-block w-100" alt="...">
 
         <div class="container">
           <div class="carousel-caption text-end">
-            <h1>One more for good measure.</h1>
-            <p>Some representative placeholder content for the third slide of this carousel.</p>
+            <h1>190 anni, un passo dopo l’altro</h1>
+            <p>Proteggervi è nel nostro DNA. Da 190 anni.</p>
           </div>
         </div>
       </div>
@@ -51,14 +51,14 @@
     <div class="row align-items-md-stretch">
         <div class="col-md-6" id="tile_right">
             <div class="h-100 p-5 bg-light border rounded-3">
-              <h3>Chi siamo</h3>
-              <p>Reale mutua è la più grande compagnia di assicurazioni italiana in forma di mutua</p>
+              <h2 style="color:rgb(24, 94, 148)"> Chi siamo</h2>
+              <p>La Società Reale Mutua di Assicurazioni è la più grande Compagnia assicurativa italiana costituita in forma di mutua.</p>
               <button class="btn btn-outline-secondary" type="button" routerLink="/chisiamo">Scopri di più</button>
             </div>
           </div>
         <div class="col-md-6" id="tile_right">
           <div class="h-100 p-5 bg-light border rounded-3">
-            <h2>Prodotti vita</h2>
+            <h2 style="color:rgb(24, 94, 148)">Prodotti vita</h2>
             <p>La tua famiglia va protetta dai gravi eventi, quelli che cambiano la vita. Con la polizza Family Care tuteli la stabilità economica tua e dei tuoi cari, con lungimiranza.</p>
             <button type="button" class="btn btn-outline-secondary" routerLink="/prodottivita">Scopri di più</button>
           </div>
