--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light" >
   <div class="container-fluid">
       <a class="navbar-brand">
-        <img src="assets/sources/logo.svg" width="120" height="50" [routerLink]='["/chisiamo"]'>
+        <img src="assets/sources/logo.svg" width="120" height="50" [routerLink]='["/home"]'>
       </a>
 
       <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
