--- a/src/app/calcolo-preventivo/calcolo-preventivo.component.html
+++ b/src/app/calcolo-preventivo/calcolo-preventivo.component.html
@@ -17,8 +17,8 @@
               <div class="row g-3">
                   <div class="col-md-6">
                       <label for="validationServer04" class="form-label">Sei un fumatore?</label>
-                      <select  class="form-select is-invalid" id="validationServer04" 
-                      [(ngModel)]="preventivoCompile.fumatore" name="fumatore" aria-describedby="validationServer04Feedback" required>
+                      <select  class="form-select" [ngClass]="{'is-invalid': !fumatore.dirty, 'is-valid': fumatore.dirty}" id="validationServer04" 
+                      [(ngModel)]="preventivoCompile.fumatore" name="fumatore"  #fumatore="ngModel" aria-describedby="validationServer04Feedback" required>
                         <option selected disabled value="seleziona">Seleziona</option>
                         <option *ngFor="let item of smoke_list" [value]="item">{{item}}</option>
                       </select>
@@ -32,14 +32,17 @@
                   <label for="validationServerUsername" class="form-label">Altezza</label>
                   <div class="input-group has-validation">  
                     
-                    <input type="text" class="form-control" [ngClass]="{'is-invalid':altezza.errors?.['minlength']}" id="validationServerUsername" minlength="3" 
+                    <input type="number" class="form-control" min="50"  [ngClass]="{'is-invalid':!altezza.dirty||!altezza.valid, 'is-valid':altezza.dirty&&altezza.valid}" id="validationServerUsername" 
                     [(ngModel)]="userLogged.altezza" id="altezza" name="altezza" #altezza="ngModel" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
                     <span class="input-group-text" id="inputGroupPrepend3">cm</span>
                     <div *ngIf=" altezza.errors?.['minlength']" id="validationServerUsernameFeedback" class="invalid-feedback">
                       Campo obbligatorio.
                     </div>
-                    <div *ngIf="altezza.dirty" id="validationServerUsernameFeedback" class="invalid-feedback">
+                    <div *ngIf="!altezza.dirty" id="validationServerUsernameFeedback" class="invalid-feedback">
                       Campo obbligatorio.
+                    </div>
+                    <div *ngIf="!altezza.valid&&altezza.dirty" id="validationServerUsernameFeedback" class="invalid-feedback">
+                      Atezza non valida.
                     </div>
                   </div>
                 </div>
@@ -48,11 +51,14 @@
                   <label for="validationServerUsername" class="form-label">Quanto pesi?</label>
                   <div class="input-group has-validation">
                     
-                    <input type="text" class="form-control is-invalid" id="validationServerUsername" 
-                    [(ngModel)]="userLogged.peso" id="peso" name="peso" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
+                    <input type="number" class="form-control is-invalid"  min="10" id="validationServerUsername" [ngClass]="{'is-invalid': !peso.dirty||!peso.valid , 'is-valid': peso.dirty&&peso.valid}"
+                    [(ngModel)]="userLogged.peso" id="peso" name="peso" #peso="ngModel" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
                     <span class="input-group-text" id="inputGroupPrepend3">kg</span>
-                    <div id="validationServerUsernameFeedback" class="invalid-feedback">
+                    <div *ngIf="!peso.dirty" id="validationServerUsernameFeedback" class="invalid-feedback">
                       Campo obbligatorio.
+                    </div>
+                    <div *ngIf="!peso.valid&&peso.dirty" id="validationServerUsernameFeedback" class="invalid-feedback">
+                      Peso non valido.
                     </div>
                   </div>
                 </div>
@@ -61,8 +67,8 @@
               <div class="row g-3">
                 <div class="col-md-6">
                   <label for="validationServer04" class="form-label">Capitale assicurato</label>
-                  <select  class="form-select is-invalid" id="validationServer04" 
-                   [(ngModel)]="preventivoCompile.capitale" name="capitale" aria-describedby="validationServer04Feedback" required>
+                  <select  class="form-select" id="validationServer04" [ngClass]="{'is-invalid': !capitale.dirty , 'is-valid': capitale.dirty}"
+                   [(ngModel)]="preventivoCompile.capitale" name="capitale" #capitale="ngModel" aria-describedby="validationServer04Feedback" required>
                     <option selected disabled value=0>Seleziona</option>
                     <option *ngFor="let item of capitali_list" [value]="item">{{item}} €</option>
                   </select>
@@ -72,8 +78,8 @@
                 </div>
                 <div class="col-md-6">
                   <label for="validationServer04" class="form-label">Durata polizza</label>
-                  <select  class="form-select is-invalid" id="validationServer04" 
-                   [(ngModel)]="preventivoCompile.durata" name="durata" aria-describedby="validationServer04Feedback" required>
+                  <select  class="form-select" id="validationServer04" [ngClass]="{'is-invalid': !durata.dirty, 'is-valid': durata.dirty}"
+                   [(ngModel)]="preventivoCompile.durata" name="durata" #durata="ngModel" aria-describedby="validationServer04Feedback" required>
                     <option selected disabled value=0>Seleziona</option>
                     <option *ngFor="let item of durata_list" [value]="item">{{item}}</option>
                   </select>
@@ -92,15 +98,16 @@
               <div class="col-md-6">
                 <label for="lastName" class="form-label">Data di nascita</label>
                 <input type="date" id="birthday" 
-                [(ngModel)]="userLogged.birthdate" name="birthday" class="form-control" required>
+                [(ngModel)]="userLogged.birthdate" name="birthday" #birthday="ngModel"
+                 class="form-control" [ngClass]="{'is-invalid': !birthday.dirty, 'is-valid': birthday.dirty}" required>
                 <div class="invalid-feedback">
                   Valid last name is required.
                 </div>
               </div>
               <div class="col-md-6">
                 <label for="validationServer04" class="form-label">Comune di nascita</label>
-                <select  class="form-select is-invalid" id="validationServer04" 
-                [(ngModel)]="userLogged.birth_place" name="birth_place" aria-describedby="validationServer04Feedback" required>
+                <select  class="form-select" id="validationServer04" [ngClass]="{'is-invalid': !birthplace.dirty, 'is-valid': birthplace.dirty}"
+                [(ngModel)]="userLogged.birth_place" name="birth_place" #birthplace="ngModel" aria-describedby="validationServer04Feedback" required>
                   <option selected disabled value="">Seleziona</option>
                   <option *ngFor="let item of comuni_list" [value]="item">{{item}}</option>
                 </select>
@@ -112,8 +119,8 @@
             <div class="row g-3">
               <div class="col-md-6">
                 <label for="validationServer04" class="form-label">Sesso</label>
-                <select  class="form-select is-invalid" id="validationServer04" 
-                [(ngModel)]="userLogged.sesso" name="sesso" aria-describedby="validationServer04Feedback" required>
+                <select  class="form-select" id="validationServer04" [ngClass]="{'is-invalid': !sesso.dirty ,'is-valid': sesso.dirty}"
+                [(ngModel)]="userLogged.sesso" name="sesso" #sesso="ngModel" aria-describedby="validationServer04Feedback" required>
                   <option selected disabled value="">Seleziona</option>
                   <option *ngFor="let item of ['Maschio','Femmina']" [value]="item">{{item}}</option>
                 </select>
@@ -124,8 +131,8 @@
               <div class="col-md-6">
                 <label for="validationServerUsername" class="form-label">Codice fiscale</label>
                 <div class="input-group has-validation"> 
-                  <input type="text" class="form-control is-invalid" id="validationServerUsername" 
-                  [(ngModel)]="userLogged.codice_fiscale" name="codice_fiscale" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
+                  <input type="text" class="form-control is-invalid" minlength="15" [ngClass]="{'is-invalid': !codice_fiscale.dirty||!codice_fiscale.valid,'is-valid': codice_fiscale.dirty&&codice_fiscale.valid}" id="validationServerUsername" 
+                  [(ngModel)]="userLogged.codice_fiscale" name="codice_fiscale" #codice_fiscale="ngModel" aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
                   <div id="validationServerUsernameFeedback" class="invalid-feedback">
                     Campo obbligatorio.
                   </div>
@@ -136,8 +143,8 @@
             <div class="row g-3">
               <div class="col-md-6">
                 <label for="validationServer04" class="form-label">Titolo di studio</label>
-                <select  class="form-select is-invalid" id="validationServer04" 
-                [(ngModel)]="userLogged.titolo_studio" name="titolo_studio" aria-describedby="validationServer04Feedback" required>
+                <select  class="form-select" id="validationServer04" [ngClass]="{'is-invalid': !titolo_studio.dirty , 'is-valid': titolo_studio.dirty}"
+                [(ngModel)]="userLogged.titolo_studio" name="titolo_studio" #titolo_studio="ngModel" aria-describedby="validationServer04Feedback" required>
                   <option selected disabled value="">Seleziona</option>
                   <option *ngFor="let item of studio_list" [value]="item">{{item}}</option>
                 </select>
@@ -147,8 +154,8 @@
               </div>
               <div class="col-md-6">
                 <label for="validationServer04" class="form-label">Professione</label>
-                <select  class="form-select is-invalid" id="validationServer04" 
-                [(ngModel)]="userLogged.professione" name="professione" aria-describedby="validationServer04Feedback" required>
+                <select  class="form-select" id="validationServer04" [ngClass]="{'is-invalid': !professione.dirty, 'is-valid': professione.dirty}"
+                [(ngModel)]="userLogged.professione" name="professione" #professione="ngModel" aria-describedby="validationServer04Feedback" required>
                   <option selected disabled value="">Seleziona</option>
                   <option *ngFor="let item of professione_list" [value]="item">{{item}}</option>
                 </select>
@@ -174,12 +181,12 @@
               <div class="yes_no_div">
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" 
-                  [(ngModel)]="preventivoCompile.portafoglio_greater_500" name="greater_500" id="inlineRadio1" value=true>
+                  [(ngModel)]="preventivoCompile.portafoglio_greater_500" name="greater_500" id="inlineRadio1" [value]="true">
                   <label class="form-check-label" for="inlineRadio1">Si</label>
                 </div>
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" 
-                  [(ngModel)]="preventivoCompile.portafoglio_greater_500" name="greater_500" id="inlineRadio2" value=false>
+                  [(ngModel)]="preventivoCompile.portafoglio_greater_500" name="greater_500" id="inlineRadio2" [value]="false">
                   <label class="form-check-label" for="inlineRadio2">No</label>
                 </div>
               </div>
@@ -190,12 +197,12 @@
               <div class="yes_no_div">
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" 
-                  [(ngModel)]="preventivoCompile.work_finance" name="work_finance" id="inlineRadio1" value=true>
+                  [(ngModel)]="preventivoCompile.work_finance" name="work_finance" id="inlineRadio1" [value]="true">
                   <label class="form-check-label" for="inlineRadio1">Si</label>
                 </div>
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" 
-                  [(ngModel)]="preventivoCompile.work_finance" name="work_finance" id="inlineRadio2" value=false>
+                  [(ngModel)]="preventivoCompile.work_finance" name="work_finance" id="inlineRadio2" [value]="false">
                   <label class="form-check-label" for="inlineRadio2">No</label>
                 </div>
               </div>
@@ -206,12 +213,12 @@
               <div class="yes_no_div">
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" 
-                  [(ngModel)]="preventivoCompile.altre_polizze" name="altre_polizze" id="inlineRadio1" value=true>
+                  [(ngModel)]="preventivoCompile.altre_polizze" name="altre_polizze" id="inlineRadio1" [value]="true">
                   <label class="form-check-label" for="inlineRadio1">Si</label>
                 </div>
                 <div class="form-check form-check-inline">
                   <input class="form-check-input" type="radio" 
-                  [(ngModel)]="preventivoCompile.altre_polizze" name="altre_polizze" id="inlineRadio2" value=false>
+                  [(ngModel)]="preventivoCompile.altre_polizze" name="altre_polizze" id="inlineRadio2" [value]="false">
                   <label class="form-check-label" for="inlineRadio2">No</label>
                 </div>
               </div>
@@ -222,8 +229,8 @@
           </div> 
         </div>
         <hr class="my-4">
-        <!-- <button  (click)="calcolaPreventivo()" [disabled]="!formPreventivo.form.valid" class="w-100 btn btn-primary btn-lg" type="submit">Calcola preventivo</button> -->
-        <button  (click)="calcolaPreventivo()"  class="w-100 btn btn-primary btn-lg" type="submit">Calcola preventivo</button>
+        <button  (click)="calcolaPreventivo()" [disabled]="!formPreventivo.form.valid" class="w-100 btn btn-primary btn-lg" type="submit">Calcola preventivo</button>
+        <!-- <button  (click)="calcolaPreventivo()"  class="w-100 btn btn-primary btn-lg" type="submit">Calcola preventivo</button> -->
 
       </div>
 
